# falcon

./: .env.example  .gitignore  BUILD_EXECUTABLE.md  DEPLOYMENT.md  FalconInstaller.spec  PLAN.md  Procfile  README.md  db.sqlite3  deploy.sh  executable_requirements.txt  falcon.py  gunicorn_config.py  main.py  pyproject.toml  requirements.txt  run_falcon.bat  setup.py  start_server.sh
.ebextensions/: 01_django.config  02_python.config  03_https.config
falcon/: asgi.py  settings.py  urls.py  wsgi.py
members/: admin.py  models.py  urls.py  views.py
members/management/commands/: create_admin.py  create_sample_data.py
members/migrations/: 0001_initial.py
static/css/: custom.css
templates/: base.html
templates/members/: dashboard.html  leaderboard.html  member_detail.html  member_list.html
