[project]
name = "falcon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awsebcli>=3.25",
    "dj-database-url>=3.0.1",
    "django>=5.2.6",
    "django-jazzmin>=3.0.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
]
